butterfly: Global, centralize LabelBy