@@ -15,245 +15,198 @@
  */
 package org.mapton.butterfly_geo_extensometer;
 
-import java.time.temporal.ChronoUnit;
-import java.util.Objects;
 import java.util.function.Function;
-import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.mapton.butterfly_core.api.LabelByCategories;
-import org.mapton.butterfly_format.types.BDimension;
+import org.mapton.butterfly_core.api.LabelBy;
 import org.mapton.butterfly_format.types.geo.BGeoExtensometer;
 import se.trixon.almond.util.Dict;
-import se.trixon.almond.util.MathHelper;
 import se.trixon.almond.util.SDict;
-import se.trixon.almond.util.StringHelper;
 
 /**
  *
  * @author Patrik Karlström
  */
 public enum ExtensoLabelBy {
-    NAME(LabelByCategories.ROOT, Dict.NAME.toString(), p -> {
+    NAME(LabelBy.CAT_ROOT, Dict.NAME.toString(), p -> {
         return p.getName();
     }),
-    NONE(LabelByCategories.ROOT, Dict.NONE.toString(), p -> {
+    NONE(LabelBy.CAT_ROOT, Dict.NONE.toString(), p -> {
         return "";
     }),
-    //    ALARM_H_NAME(LabelByCategories.ALARM, Strings.HEIGHT_NAME, p -> {
-    //        return p.getAlarm1Id();
+    //    ALARM_H_NAME(LabelBy.CAT_ALARM, LabelBy.HEIGHT_NAME, p -> {
+    //        return LabelBy.alarmHName(p);
     //    }),
-    //    //    ALARM_H_VALUE(LabelByCategories.ALARM, Strings.HEIGHT_VALUE, p -> {
-    //    //        return AlarmHelper.getInstance().getLimitsAsString(BComponent.HEIGHT, p);
-    //    //    }),
-    //    ALARM_H_PERCENT(LabelByCategories.ALARM, Strings.HEIGHT_PERCENT, p -> {
-    //        return p.ext().getAlarmPercentHString(p.ext());
+    //    ALARM_H_VALUE(LabelBy.CAT_ALARM, LabelBy.HEIGHT_VALUE, p -> {
+    //        return LabelBy.alarmHValue(p);
     //    }),
-    //    ALARM_P_NAME(LabelByCategories.ALARM, Strings.PLANE_NAME, p -> {
-    //        return p.getAlarm2Id();
+    //    ALARM_H_PERCENT(LabelBy.CAT_ALARM, LabelBy.HEIGHT_PERCENT, p -> {
+    //        return LabelBy.alarmHPercent(p);
     //    }),
-    //    //    ALARM_P_VALUE(LabelByCategories.ALARM, Strings.PLANE_VALUE, p -> {
-    //    //        return AlarmHelper.getInstance().getLimitsAsString(BComponent.PLANE, p);
-    //    //    }),
-    //    ALARM_P_PERCENT(LabelByCategories.ALARM, Strings.PLANE_PERCENT, p -> {
-    //        return p.ext().getAlarmPercentPString(p.ext());
+    //    ALARM_P_NAME(LabelBy.CAT_ALARM, LabelBy.PLANE_NAME, p -> {
+    //        return LabelBy.alarmPName(p);
     //    }),
-    //    ALARM_PERCENT(LabelByCategories.ALARM, "%", p -> {
-    //        return p.ext().getAlarmPercentString(p.ext());
+    //    ALARM_P_VALUE(LabelBy.CAT_ALARM, LabelBy.PLANE_VALUE, p -> {
+    //        return LabelBy.alarmPValue(p);
     //    }),
-    DATE_LATEST(LabelByCategories.DATE, SDict.LATEST.toString(), p -> {
-        var date = p.ext().getObservationFilteredLastDate();
-
-        return date == null ? "-" : date.toString();
+    //    ALARM_P_PERCENT(LabelBy.CAT_ALARM, LabelBy.PLANE_PERCENT, p -> {
+    //        return LabelBy.alarmPPercent(p);
+    //    }),
+    //    ALARM_PERCENT(LabelBy.CAT_ALARM, "%", p -> {
+    //        return LabelBy.alarmPercent(p);
+    //    }),
+    DATE_LATEST(LabelBy.CAT_DATE, SDict.LATEST.toString(), p -> {
+        return LabelBy.dateLatest(p);
     }),
-    DATE_NEXT(LabelByCategories.DATE, Dict.NEXT.toString(), p -> {
-        var date = p.ext().getObservationRawNextDate();
-
-        return date == null ? "-" : date.toString();
+    DATE_NEXT(LabelBy.CAT_DATE, Dict.NEXT.toString(), p -> {
+        return LabelBy.dateNext(p);
     }),
-    DATE_ZERO(LabelByCategories.DATE, SDict.ZERO.toString(), p -> {
-        var date = p.getDateZero();
-
-        return date == null ? "-" : date.toString();
+    DATE_ZERO(LabelBy.CAT_DATE, SDict.ZERO.toString(), p -> {
+        return LabelBy.dateZero(p);
     }),
-    DATE_FIRST(LabelByCategories.DATE, Dict.FIRST.toString(), p -> {
-//        try {
-//            return p.ext().getObservationsTimeFiltered().getFirst().getDate().toLocalDate().toString();
-//        } catch (Exception e) {
-//            return "-";
-//        }
-        var date = p.ext().getObservationFilteredFirstDate();
-
-        return date == null ? "-" : date.toString();
+    DATE_FIRST(LabelBy.CAT_DATE, Dict.FIRST.toString(), p -> {
+        return LabelBy.dateFirst(p);
     }),
-    //    DATE_ROLLING(LabelByCategories.DATE, "rullande", o -> {
+    //    DATE_ROLLING(LabelBy.CAT_DATE, "rullande", o -> {
     //        var date = o.getDateRolling();
     //
     //        return date == null ? "-" : date.toString();
     //    }),
-    DATE_VALIDITY(LabelByCategories.DATE, "%s - %s".formatted(Dict.FROM.toString(), Dict.TO.toString()), p -> {
-        var d1 = p.getDateValidFrom();
-        var d2 = p.getDateValidTo();
-        if (ObjectUtils.allNull(d1, d2)) {
-            return "";
-        } else {
-            var dat1 = d1 == null ? "" : d1.toString();
-            var dat2 = d2 == null ? "" : d2.toString();
-
-            return "%s - %s".formatted(dat1, dat2);
-        }
+    DATE_VALIDITY(LabelBy.CAT_DATE, "%s - %s".formatted(Dict.FROM.toString(), Dict.TO.toString()), p -> {
+        return LabelBy.dateValidity(p);
     }),
-    //    DATE_REACHED_LIMIT_VALUE(LabelByCategories.DATE, SDict.REACHED_LIMIT_VALUE.toString(), p -> {
-    //        return p.ext().limitValuePredictor().getExtrapolatedLimitDate();
-    //    }),
-    MISC_GROUP(LabelByCategories.MISC, Dict.GROUP.toString(), p -> {
-        return Objects.toString(p.getGroup(), "NODATA");
+    MISC_GROUP(LabelBy.CAT_MISC, Dict.GROUP.toString(), p -> {
+        return LabelBy.miscGroup(p);
     }),
-    MISC_CATEGORY(LabelByCategories.MISC, Dict.CATEGORY.toString(), p -> {
-        return Objects.toString(p.getCategory(), "NODATA");
+    MISC_CATEGORY(LabelBy.CAT_MISC, Dict.CATEGORY.toString(), p -> {
+        return LabelBy.miscCategory(p);
     }),
-    MISC_STATUS(LabelByCategories.MISC, Dict.STATUS.toString(), p -> {
-        return Objects.toString(p.getStatus(), "NODATA");
+    MISC_STATUS(LabelBy.CAT_MISC, Dict.STATUS.toString(), p -> {
+        return LabelBy.miscStatus(p);
     }),
-    MISC_OPERATOR(LabelByCategories.MISC, SDict.OPERATOR.toString(), p -> {
-        return Objects.toString(p.getOperator(), "NODATA");
+    MISC_OPERATOR(LabelBy.CAT_MISC, SDict.OPERATOR.toString(), p -> {
+        return LabelBy.miscOperator(p);
     }),
-    MISC_ORIGIN(LabelByCategories.MISC, Dict.ORIGIN.toString(), p -> {
-        return Objects.toString(p.getOrigin(), "NODATA");
+    MISC_ORIGIN(LabelBy.CAT_MISC, Dict.ORIGIN.toString(), p -> {
+        return LabelBy.miscOrigin(p);
     }),
-    MISC_FREQUENCY(LabelByCategories.MISC, SDict.FREQUENCY.toString(), p -> {
-        return p.getFrequency() != null ? p.getFrequency().toString() : "--";
+    MISC_FREQUENCY(LabelBy.CAT_MISC, SDict.FREQUENCY.toString(), p -> {
+        return LabelBy.miscFrequency(p);
     }),
-    MISC_FREQUENCY_DEFAULT(LabelByCategories.MISC, "%s (%s)".formatted(SDict.FREQUENCY.toString(), Dict.DEFAULT.toLower()), p -> {
-        return p.getFrequencyDefault().toString();
+    MISC_FREQUENCY_ALL(LabelBy.CAT_MISC, "%s (aktuell : %s : %s)".formatted(SDict.FREQUENCY.toString(), Dict.DEFAULT.toLower(), Dict.HIGH.toLower()), p -> {
+        return LabelBy.miscFrequencyAll(p);
     }),
-    MISC_FREQUENCY_AND_DEFAULT(LabelByCategories.MISC, "%s / %s".formatted(SDict.FREQUENCY.toString(), Dict.DEFAULT.toString()), p -> {
-        var freq = p.getFrequency() != null ? p.getFrequency().toString() : "--";
-        var def = p.getFrequencyDefault() != null ? p.getFrequencyDefault().toString() : "--";
-
-        return "%s / %s".formatted(freq, def);
+    MISC_FREQUENCY_DEFAULT(LabelBy.CAT_MISC, "%s (%s)".formatted(SDict.FREQUENCY.toString(), Dict.DEFAULT.toLower()), p -> {
+        return LabelBy.miscFrequencyDefault(p);
     }),
-    MISC_DIMENS(LabelByCategories.MISC, SDict.DIMENSION.toString(), p -> {
-        return p.getDimension() != null ? p.getDimension().getName() : "--";
+    MISC_FREQUENCY_HIGH(LabelBy.CAT_MISC, "%s (%s)".formatted(SDict.FREQUENCY.toString(), Dict.HIGH.toLower()), p -> {
+        return LabelBy.miscFrequencyHigh(p);
     }),
-    MISC_DIMENS_FREQUENCY(LabelByCategories.MISC, Strings.DIMENS_FREQ, p -> {
+    MISC_FREQUENCY_HIGH_PARAM(LabelBy.CAT_MISC, "%s (%s)".formatted(SDict.FREQUENCY.toString(), "%s, villkor".formatted(Dict.HIGH.toLower())), p -> {
+        return LabelBy.miscFrequencyHighParam(p);
+    }),
+    MISC_DIMENS(LabelBy.CAT_MISC, SDict.DIMENSION.toString(), p -> {
+        return LabelBy.miscDimens(p);
+    }),
+    MISC_DIMENS_FREQUENCY(LabelBy.CAT_MISC, LabelBy.DIMENS_FREQ, p -> {
         return "%sD %s".formatted(MISC_DIMENS.getLabel(p), MISC_FREQUENCY.getLabel(p));
     }),
-    //    MEAS_SPEED(LabelByCategories.MEAS, "%s (mm/%s)".formatted(Dict.SPEED.toString(), Dict.Time.YEAR.toLower()), p -> {
-    //        if (p.getDimension() == BDimension._2d || p.ext().getObservationsTimeFiltered().size() < 2 || p.ext().deltaZero().getDelta1() == null) {
-    //            return "-";
-    //        } else {
-    //            try {
-    //                var speed = p.ext().getSpeed();
-    //                var ageIndicator = p.ext().getMeasurementAge(ChronoUnit.DAYS) > 365 ? "*" : "";
-    //
-    //                return "%.1f  (%.1f)%s".formatted(speed[0] * 1000.0, speed[1], ageIndicator);
-    ////                return "%.1f mm/%s (%.1f)%s".formatted(speed[0] * 1000.0, Dict.Time.YEAR.toLower(), speed[1], ageIndicator);
-////                return "%.1f (%.1f)%s".formatted(speed[0], Dict.Time.YEAR.toLower(), speed[1], ageIndicator);
-//            } catch (Exception e) {
+    MISC_ROLLING_FORMULA(LabelBy.CAT_MISC, "Formel, rullande", p -> {
+        return LabelBy.miscRollingFormula(p);
+    }),
+    MISC_ROLLING_SPARSE(LabelBy.CAT_MISC, "Formel, utglesning", p -> {
+        return LabelBy.miscSparse(p);
+    }),
+    MEAS_LATEST_OPERATOR(LabelBy.CAT_MEAS, SDict.LATEST_S.toString().formatted(SDict.OPERATOR.toLower()), p -> {
+        return LabelBy.measLatestOperator(p);
+    }),
+    MEAS_COUNT_ALL(LabelBy.CAT_MEAS, LabelBy.MEAS_COUNT_ALL, p -> {
+        return LabelBy.measCountAll(p);
+    }),
+    MEAS_COUNT_SELECTION(LabelBy.CAT_MEAS, LabelBy.MEAS_COUNT_SELECTION, p -> {
+        return LabelBy.measCountFiltered(p);
+    }),
+    MEAS_COUNT_SELECTION_ALL(LabelBy.CAT_MEAS, LabelBy.MEAS_COUNT, p -> {
+        return LabelBy.measCountFilteredAll(p);
+    }),
+    MEAS_AGE(LabelBy.CAT_MEAS, Dict.AGE.toString(), p -> {
+        return LabelBy.measAge(p);
+    }),
+    MEAS_AGE_ZERO(LabelBy.CAT_MEAS, "%s, %s".formatted(Dict.AGE.toString(), SDict.ZERO.toLower()), p -> {
+        return LabelBy.measAgeZero(p);
+    }),
+    MEAS_AGE_ALARMLEVEL(LabelBy.CAT_MEAS, "%s, %s".formatted(Dict.AGE.toString(), SDict.ALARM_LEVEL.toLower()), p -> {
+        return LabelBy.measAgeAlarmLevel(p);
+    }),
+    MEAS_NEED(LabelBy.CAT_MEAS, Dict.NEED.toString(), p -> {
+        return LabelBy.measNeed(p);
+    }),
+    MEAS_NEED_FREQ(LabelBy.CAT_MEAS, "%s (%s)".formatted(Dict.NEED.toString(), SDict.FREQUENCY.toString()), p -> {
+        return LabelBy.measNeedFreq(p);
+//    }),
+//    VALUE_Z(LabelBy.CAT_VALUE, "Z", p -> {
+//        var z = p.getZeroZ();
+//
+//        return z == null ? "-" : MathHelper.convertDoubleToStringWithSign(z, 3);
+//    }),
+//    VALUE_DELTA_ZERO(LabelBy.CAT_VALUE, "Δ₀", p -> {
+//        return p.ext().deltaZero().getDelta(3);
+//    }),
+//    VALUE_DELTA_ZERO_Z(LabelBy.CAT_VALUE, "ΔZ₀", p -> {
+//        var daysSinceMeasurement = p.ext().getZeroMeasurementAge(ChronoUnit.DAYS);
+//
+//        return "%s (%d)".formatted(p.ext().deltaZero().getDelta1(3), daysSinceMeasurement);
+//    }),
+//    VALUE_DELTA_LATEST_Z(LabelBy.CAT_VALUE, "ΔZ (dagar)", p -> {
+//        if (p.getDimension() == BDimension._2d) {
+//            return ":";
+//        }
+//        long daysSinceMeasurement;
+//        var observations = p.ext().getObservationsTimeFiltered();
+//        double delta;
+//        if (observations.size() > 1) {
+//            var secondLast = observations.get(observations.size() - 2);
+//            var last = observations.get(observations.size() - 1);
+//            var lastDelta = last.ext().getDeltaZ();
+//            var secondLastDelta = secondLast.ext().getDeltaZ();
+//            if (ObjectUtils.anyNull(secondLastDelta, lastDelta)) {
 //                return "-";
 //            }
+//
+//            delta = lastDelta - secondLastDelta;
+//            daysSinceMeasurement = ChronoUnit.DAYS.between(secondLast.getDate(), last.getDate());
+//        } else {
+//            return "-";
 //        }
+//
+//        return "%s (%d)".formatted(StringHelper.round(delta, 3), daysSinceMeasurement);
 //    }),
-//    MEAS_LATEST_OPERATOR(LabelByCategories.MEAS, SDict.LATEST_S.toString().formatted(SDict.OPERATOR.toLower()), p -> {
-//        return p.ext().getObservationsAllRaw().getLast().getOperator();
+//    VALUE_DELTA_LATEST_Z_ZERO(LabelBy.CAT_VALUE, "ΔZ (ΔZ₀)", p -> {
+//        if (p.getDimension() == BDimension._2d) {
+//            return ":";
+//        }
+//        var observations = p.ext().getObservationsTimeFiltered();
+//        double delta;
+//        if (observations.size() > 1) {
+//            var secondLast = observations.get(observations.size() - 2);
+//            var last = observations.get(observations.size() - 1);
+//            var lastDelta = last.ext().getDeltaZ();
+//            var secondLastDelta = secondLast.ext().getDeltaZ();
+//            if (ObjectUtils.anyNull(secondLastDelta, lastDelta)) {
+//                return "-";
+//            }
+//
+//            delta = lastDelta - secondLastDelta;
+//        } else {
+//            return "-";
+//        }
+//
+//        return "%s (%.3f)".formatted(StringHelper.round(delta, 3), p.ext().deltaZero().getDelta1());
 //    }),
-    MEAS_COUNT_ALL(LabelByCategories.MEAS, Strings.MEAS_COUNT_ALL, p -> {
-        return "%d".formatted(
-                p.ext().getNumOfObservations()
-        );
-    }),
-    MEAS_COUNT_SELECTION(LabelByCategories.MEAS, Strings.MEAS_COUNT_SELECTION, p -> {
-        return "%d".formatted(
-                p.ext().getNumOfObservationsFiltered()
-        );
-    }),
-    MEAS_COUNT_SELECTION_ALL(LabelByCategories.MEAS, Strings.MEAS_COUNT, p -> {
-        return "%d / %d".formatted(
-                p.ext().getNumOfObservationsFiltered(),
-                p.ext().getNumOfObservations()
-        );
-    }),
-    MEAS_AGE(LabelByCategories.MEAS, Dict.AGE.toString(), p -> {
-        var daysSinceMeasurement = p.ext().getMeasurementAge(ChronoUnit.DAYS);
-
-        return "%d".formatted(daysSinceMeasurement);
-    }),
-    MEAS_AGE_ZERO(LabelByCategories.MEAS, "%s, %s".formatted(Dict.AGE.toString(), SDict.ZERO.toLower()), p -> {
-        var daysSinceMeasurement = p.ext().getZeroMeasurementAge(ChronoUnit.DAYS);
-
-        return "%d".formatted(daysSinceMeasurement);
-    }),
-    //    MEAS_AGE_ALARMLEVEL(LabelByCategories.MEAS, "%s, %s".formatted(Dict.AGE.toString(), SDict.ALARM_LEVEL.toLower()), p -> {
-    //        return p.ext().getAlarmLevelAge();
-    //    }),
-    MEAS_NEED(LabelByCategories.MEAS, Dict.NEED.toString(), p -> {
-        var need = p.getFrequency() == 0 ? "-" : Long.toString(p.ext().getMeasurementUntilNext(ChronoUnit.DAYS));
-        return need;
-    }),
-    VALUE_Z(LabelByCategories.VALUE, "Z", p -> {
-        var z = p.getZeroZ();
-
-        return z == null ? "-" : MathHelper.convertDoubleToStringWithSign(z, 3);
-    }),
-    VALUE_DELTA_ZERO(LabelByCategories.VALUE, "Δ₀", p -> {
-        return p.ext().deltaZero().getDelta(3);
-    }),
-    VALUE_DELTA_ZERO_Z(LabelByCategories.VALUE, "ΔZ₀", p -> {
-        var daysSinceMeasurement = p.ext().getZeroMeasurementAge(ChronoUnit.DAYS);
-
-        return "%s (%d)".formatted(p.ext().deltaZero().getDelta1(3), daysSinceMeasurement);
-    }),
-    VALUE_DELTA_LATEST_Z(LabelByCategories.VALUE, "ΔZ (dagar)", p -> {
-        if (p.getDimension() == BDimension._2d) {
-            return ":";
-        }
-        long daysSinceMeasurement;
-        var observations = p.ext().getObservationsTimeFiltered();
-        double delta;
-        if (observations.size() > 1) {
-            var secondLast = observations.get(observations.size() - 2);
-            var last = observations.get(observations.size() - 1);
-            var lastDelta = last.ext().getDeltaZ();
-            var secondLastDelta = secondLast.ext().getDeltaZ();
-            if (ObjectUtils.anyNull(secondLastDelta, lastDelta)) {
-                return "-";
-            }
-
-            delta = lastDelta - secondLastDelta;
-            daysSinceMeasurement = ChronoUnit.DAYS.between(secondLast.getDate(), last.getDate());
-        } else {
-            return "-";
-        }
-
-        return "%s (%d)".formatted(StringHelper.round(delta, 3), daysSinceMeasurement);
-    }),
-    VALUE_DELTA_LATEST_Z_ZERO(LabelByCategories.VALUE, "ΔZ (ΔZ₀)", p -> {
-        if (p.getDimension() == BDimension._2d) {
-            return ":";
-        }
-        var observations = p.ext().getObservationsTimeFiltered();
-        double delta;
-        if (observations.size() > 1) {
-            var secondLast = observations.get(observations.size() - 2);
-            var last = observations.get(observations.size() - 1);
-            var lastDelta = last.ext().getDeltaZ();
-            var secondLastDelta = secondLast.ext().getDeltaZ();
-            if (ObjectUtils.anyNull(secondLastDelta, lastDelta)) {
-                return "-";
-            }
-
-            delta = lastDelta - secondLastDelta;
-        } else {
-            return "-";
-        }
-
-        return "%s (%.3f)".formatted(StringHelper.round(delta, 3), p.ext().deltaZero().getDelta1());
-    }),
-    VALUE_DELTA_ROLLING(LabelByCategories.VALUE, "Δᵣ", p -> {
-        return p.ext().deltaRolling().getDelta(3);
-    }),
-    VALUE_DELTA_ROLLING_Z(LabelByCategories.VALUE, "ΔZᵣ", p -> {
-        return p.ext().deltaRolling().getDelta1(3);
+//    VALUE_DELTA_ROLLING(LabelBy.CAT_VALUE, "Δᵣ", p -> {
+//        return p.ext().deltaRolling().getDelta(3);
+//    }),
+//    VALUE_DELTA_ROLLING_Z(LabelBy.CAT_VALUE, "ΔZᵣ", p -> {
+//        return p.ext().deltaRolling().getDelta1(3);
     });
     private final String mCategory;
     private final Function<BGeoExtensometer, String> mFunction;
@@ -285,18 +238,4 @@ public enum ExtensoLabelBy {
         return mName;
     }
 
-    private class Strings {
-
-        public static final String HEIGHT_NAME = "%s, %s".formatted(Dict.Geometry.HEIGHT, Dict.NAME.toLower());
-        public static final String HEIGHT_PERCENT = "%s, %%".formatted(Dict.Geometry.HEIGHT);
-        public static final String HEIGHT_VALUE = "%s, %s".formatted(Dict.Geometry.HEIGHT, Dict.VALUE.toLower());
-        public static final String MEAS_COUNT = Dict.NUM_OF_S.toString().formatted(SDict.MEASUREMENTS.toLower());
-        public static final String MEAS_COUNT_ALL = "%s (%s)".formatted(MEAS_COUNT, Dict.ALL.toLower());
-        public static final String MEAS_COUNT_SELECTION = "%s (%s)".formatted(MEAS_COUNT, Dict.SELECTION.toLower());
-        public static final String PLANE_NAME = "%s, %s".formatted(Dict.Geometry.PLANE, Dict.NAME.toLower());
-        public static final String PLANE_PERCENT = "%s, %%".formatted(Dict.Geometry.PLANE);
-        public static final String PLANE_VALUE = "%s, %s".formatted(Dict.Geometry.PLANE, Dict.VALUE.toLower());
-        public static final String DIMENS_FREQ = "%s & %s".formatted(SDict.DIMENSION.toString(), SDict.FREQUENCY.toString());
-
-    }
 }
